# AutoReportSystem

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  init.sql  main.py  pyproject.toml  qodo.md  test_datetime_fix.py
alembic/: env.py
alembic/versions/: 03746358d906_job_email_config_table_and_analysis_.py  20241215_add_task_notes.py  20241215_add_task_status_history.py  20241224_add_job_tracking.py  20250103_add_task_archive.py  20250115_add_timeline_content.py  2968830196e3_initial_migration.py  32cc6ceab06f_init_tables.py  4ce3c6edb08d_add_user_role_field.py  861d4ee65c87_update_tasks_table.py  8b5a05156045_sync_with_current_db_state.py  8c8b218a72b0_init_db.py  add_email_templates_table.py  add_job_fields.py  add_job_model.py  add_template_fields.py  add_user_role_field.py  add_user_sessions_table.py  e5df3b413d5b_update_category_in_tasks_table.py
app/: main.py
app/config/: config.py  logging_config.py
app/database/: db_connector.py  models.py
app/pages/: dashboard.py  login.py  signup.py
app/security/: backend_session_manager.py  middleware.py  route_protection.py  session_manager.py  session_validator.py
app/ui/: dashboard.py  dashboard_task_analysis.py  dashboard_with_archive.py  job_email_config.py  job_management.py  jobs_dashboard.py  kanban_board.py  loader.py  login.py  navbar.py  security_dashboard.py  signup.py  smtp_conf.py  st_ui.py  system_monitor.py  template_designer.py  user_settings.py
config/: email_settings.py
docs/: api.md  architecture.md  installation.md
infra/: Dockerfile  Dockerfile.prod  nginx.conf
tests/unit/: test_email_client.py  test_models.py
tools/: README.md  __init__.py
tools/database/: __init__.py  quick_alembic_sync.py  run_sync_check.py  (+1 more)
(+61 files in other folders)
